Async pipe nodes now work.